deployment/k8s/stage/stage-deployment-test.yaml
apiVersion: v1
kind: Namespace
metadata:
   name: stage
   labels:
     name: stage
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: frontend-stage
  namespace: stage
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        component: frontend-api
    spec:
      containers:
      - name: frontend-api
        image: fbeltrao.azurecr.io/frontendapi:28
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-stage
  namespace: stage
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        component: frontend-web
    spec:
      containers:
      - name: frontend-web
        image: fbeltrao.azurecr.io/frontendweb:28
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-web
  namespace: stage
  labels:
    app: frontend
    component: frontend-web
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
  selector:
    component: frontend-web
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-api
  namespace: stage
  labels:
    app: frontend
    component: frontend-api
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    component: frontend-api
